# rs-pinball-space-cadet

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  loader.rs  main.rs  messages.rs  pinball_table.rs
src/dat/: bitmap_8bpp.rs  dat.rs  entry.rs  header.rs  mod.rs
src/dat/objects/: background.rs
src/partman/: bitmap_16bpp.rs  bitmap_8bpp.rs  colors.rs  dat.rs  entry.rs  group.rs  header.rs  mod.rs  table_objects.rs  table_size.rs  zmap.rs
src/partman/objects/: mod.rs
src/table/: bumper.rs  left_flipper.rs  mod.rs  score.rs
