[package]
name = "rs-pinball-space-cadet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.2.1"
debug-ignore = "1.0.3"
sdl2 = { version = "0.35", features = ["image", "gfx"] }
thiserror = "1.0"
