[package]
name = "rs-pinball-space-cadet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitfrob = "1.3"
bincode = "1.3"
bytes = "1.5"
#bytemuck = "1.13.1"
tokio = { version = "1", features = ["full"] }
derivative = "2.2"
sdl2 = { version = "0.36", features = ["image", "gfx"] }
thiserror = "1.0"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
